tests/ui/rfcs/rfc-2632-const-trait-impl/const-impl-requires-const-trait.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/const-impl-requires-const-trait.rs:3:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: const `impl` for trait `A` which is not marked with `#[const_trait]`
  --> $DIR/const-impl-requires-const-trait.rs:8:12
   |
LL | pub trait A {}
   | - help: mark `A` as const: `#[const_trait]`
...
LL | impl const A for () {}
   |            ^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: aborting due to 1 previous error; 1 warning emitted

